fix page area spacing

--- a/css/style.css
+++ b/css/style.css
@@ -214,23 +214,27 @@ input:focus {
 .page-bg {
   background-color: #020a27; }
 
-.page-area,
+.page-area {
+  padding-top: 140px;
+  padding-bottom: 129px; }
+
 .blog-area {
   padding-top: 144px;
   padding-bottom: 104px; }
-  @media (max-width: 991px) {
-    .page-area,
-    .blog-area {
-      padding-top: 100px;
-      padding-bottom: 52px; } }
-  @media (max-width: 767px) {
-    .page-area,
-    .blog-area {
-      padding-top: 70px;
-      padding-bottom: 22px; } }
-  .page-area .page-links,
-  .blog-area .page-links {
-    margin-bottom: 15px; }
+
+@media (max-width: 991px) {
+  .page-area,
+  .blog-area {
+    padding-top: 100px;
+    padding-bottom: 52px; } }
+@media (max-width: 767px) {
+  .page-area,
+  .blog-area {
+    padding-top: 70px;
+    padding-bottom: 22px; } }
+.page-area .page-links,
+.blog-area .page-links {
+  margin-bottom: 15px; }
 
 .border-radius-12 {
   border-radius: 12px; }
